Вторая лабораторная работа Архитектурные факторы.md

--- a/1. Исходные сведения/Архитектурные факторы.md
+++ b/1. Исходные сведения/Архитектурные факторы.md
@@ -1,143 +1,202 @@
-
-Требования к системе формулируются в разрезе функциональных, нефункциональных требований, ограничений и принципов.
+# Требования к системе «Платформа для трейдинга»
 
 ## Функциональные требования
 
+**F01:** Регистрация пользователя (трейдер/аналитик/брокер/админ).
 
+**F02:** Авторизация и управление сессиями (включая восстановление доступа).
+
+**F03:** Управление ролями и правами доступа (RBAC).
+
+**F04:** Просмотр списка торговых инструментов (поиск/фильтры/избранное).
+
+**F05:** Получение котировок в реальном времени (подписка на поток).
+
+**F06:** Просмотр графика инструмента.
+
+**F07:** Создание ордера (buy/sell, рыночный/лимитный — минимум).
+
+**F08:** Отмена/изменение ордера до исполнения.
+
+**F09:** Отслеживание статуса ордера.
+
+**F10:** Получение подтверждений сделок от брокера/биржи.
+
+**F11:** Просмотр портфеля.
+
+**F12:** Просмотр истории сделок.
+
+**F13:** Расчёт и отображение PnL.
+
+**F14:** Создание и управление авто-стратегиями (условия/активация/деактивация).
+
+**F15:** Автоматическое размещение ордера при срабатывании стратегии (если включено).
+
+**F16:** Уведомления пользователю (исполнение, отказ, оповещение по цене/стратегии).
+
+**F17:** Публикация аналитических обзоров/рекомендаций аналитиком.
+
+**F18:** Просмотр ленты обзоров/рекомендаций трейдерами.
+
+**F19:** Форум/обсуждения: создание темы, сообщения, модерация.
+
+**F20:** Формирование дневного отчёта для брокера по операциям (просмотр/экспорт).
+
+**F21:** Администрирование: настройка параметров платформы, мониторинг активности, аудит.
+
+---
 
 ## Нефункциональные требования
 
 ### Производительность (Performance)
 
-Время реакции приложения на действие пользователя при редактировании данных;
-Время реакции приложения на отображение списочных данных с фильтром;
-Время выгрузки документа-отчета (docx, xlsx);
-Время синхронизации при первоначальной загрузке данных в мобильном приложении;
+**PER01:** Задержка доставки котировок до клиента (UI) — целевой SLA: *≤ 1 сек*.
+
+**PER02:** Размещение ордера (от нажатия до подтверждения “принят системой”) — *≤ 1–2 сек*.
+
+**PER03:** Обновление статуса ордера после ответа брокера — *≤ 1 сек* после получения сообщения.
+
+**PER04:** Открытие портфеля/истории сделок — *≤ 2 сек*.
+
+**PER05:** Формирование отчёта (xlsx/pdf) — *≤ 5–10 сек*.
+
+**PER06:** Авторизация/обновление токена — *≤ 1 сек*.
 
 
-### Масштабируемость (Scalability)
-
-Ожидаемая нагрузка на систему от пользователя (как часто и что будет делать в приложении, какие функции задействовать). Если предполагаются разные пользователи, то расписать по ролям.
-Плановое количество пользователей: на момент запуска, через год, через 3 года, через 5 лет;
-
-
-### Доступность (Availability)
-
-Какой процент отказа или обслуживания системы допустим (в %) — http://uptime.is/
-Будет ли время в течение суток, когда нагрузки от пользователей не будет — окно обслуживания.
-
-
-### Безопасность и аудит (Security)
-
-Требования к безопасности от внутреннего отдела ИБ или соответствия нормативным актам, регламентам (приложить);
-Будет ли обработка ПД, требуется ли проходить аттестацию соответствия или другие процедуры. 
-Есть ли доступ к интернету из контура приложения (для обновлений компонентов решения) или доступ закрыт?
-Какие требования к аудиту действий пользователей в системе?
-Любая другая важная информация по ИБ
-
-
-### Надежность (Durability, Disaster Recovery)
-
-Требования к резервному копированию данных.
-Требования к восстановлению после сбоев: ручное, автоматическое; нужно ли резервировать и дублировать мощности?
-
-
-### Мониторинг (Monitoring)
-
-Требования к мониторингу работоспособности системы. Есть ли стандартные инструменты в организации или проектировать с нуля?
-
-
-### Организационные и юридические вопросы (Legal, Regulatory and Compliance)
-
-Прочие юридические и организационные вопросы, которые могут повлиять на проект.
-
-### Локализация и интернационализация (I18n, L10n)
-
-Только русский или еще какие языки?
-Будет ли требоваться перевод контента или только интерфейса?
-
-### Целевые платформа и устройства пользователей
-
-Есть ли ограничения на браузеры
-Какие операционные системы мобильных устройств
-Какие производители устройств
-
-
-## Ограничения
-
-
-## Принципы
-
-
-----
-
-Пример:
-
-## Функциональные требования
-
-- **F01**: Пользователи должны иметь возможность регистрации и авторизации.
-- **F02**: Пользователи должны иметь возможность редактировать свой профиль.
-...
-
-## Нефункциональные требования
-
-### Производительность (Performance)
-
-- **PER01**: Время реакции приложения на действие пользователя при редактировании данных не должно превышать 1 секунду.
-- **PER02**: Приложение должно отображать списочные данные с фильтром за 2 секунды или менее.
-- **PER03**: Время выгрузки документа-отчета (docx, xlsx) не должно превышать 5 секунд.
-- **PER04**: Время синхронизации при первоначальной загрузке данных в мобильном приложении должно быть не более 30 секунд.
+---
 
 ### Масштабируемость (Scalability)
 
-- **SCA01**: На момент запуска ожидается 10 000 активных пользователей.
-- **SCA02**: Через год ожидается рост до 20 000 активных пользователей.
-- **SCA03**: Через 3 года — до 50 000 пользователей.
-- **SCA04**: Через 5 лет — до 100 000 пользователей.
+#### Ожидаемая нагрузка по ролям:
+
+* **Трейдеры:** частые чтения (котировки, портфель), периодические команды (ордера).
+* **Аналитики:** редкие операции публикации, чтение аналитики.
+* **Брокеры:** поток подтверждений сделок/статусов, отчётность.
+* **Админы:** редкие операции, но тяжёлые запросы по аудиту/мониторингу.
+
+#### Рост пользователей (примерные оценки — поправишь под свой курс/вуз):
+
+**SCA01:** На запуске — 500–1 500 активных пользователей.
+
+**SCA02:** Через год — 3 000–5 000.
+
+**SCA03:** Через 3 года — 10 000+.
+
+**SCA04:** Поток котировок должен поддерживать большое число подписок (горизонтальное масштабирование сервиса котировок/шины событий).
+
+**SCA05:** Обработка подтверждений сделок должна быть устойчива к всплескам (очереди/буферизация/идемпотентность).
+
+---
 
 ### Доступность (Availability)
 
-- **AVA01**: Допустимый процент отказа или обслуживания системы составляет 99.9%.
-- **AVA02**: Окно обслуживания (без нагрузки от пользователей): с 02:00 до 03:00.
+**AVA01:** Целевая доступность: *99.9%*.
+
+**AVA02:** Окно обслуживания: *03:00–04:00* по местному времени.
+
+**AVA03:** При падении одного узла система продолжает работу в режиме пониженной производительности.
+
+**AVA04:** Потеря связи с внешним брокером не должна “ронять” всю платформу (degraded mode: UI доступен, показывать статус “нет данных/ордеры недоступны”).
+
+---
 
 ### Безопасность и аудит (Security)
 
-- **SEC01**: Система должна соответствовать требованиям внутреннего отдела ИБ (приложить документ).
-- **SEC02**: Предполагается обработка ПД; требуется проходить аттестацию соответствия.
-- **SEC03**: Доступ к интернету из контура приложения ограничен.
-- **SEC04**: Требуется аудит действий пользователей.
+**SEC01:** Соблюдение требований по защите персональных данных.
 
-### Надежность (Durability, Disaster Recovery)
+**SEC02:** Шифрование при передаче: HTTPS/TLS 1.2+.
 
-- **DUR01**: Ежедневное резервное копирование данных.
-- **DUR02**: Автоматическое восстановление после сбоев.
+**SEC03:** Шифрование чувствительных данных на хранении.
+
+**SEC04:** Пароли хранить как хеши.
+
+**SEC05:** MFA для администраторов и брокеров.
+
+**SEC06:** Аудит действий: входы, размещение/отмена ордеров, действия админа, изменения стратегий.
+
+**SEC07:** Защита от ботов/флуда/DDoS: rate limit, WAF/CDN.
+
+**SEC08:** Принцип наименьших привилегий, строгая сегментация доступов сервисов.
+
+---
+
+### Надёжность и восстановление (Durability, Disaster Recovery)
+
+**DUR01:** Ежедневные бэкапы БД, автоматизация.
+
+**DUR02:** Хранение бэкапов минимум 30 дней.
+
+**DUR03:** Репликация БД, возможность переключения.
+
+**DUR04:** Цели восстановления: **RPO ≤ 15 мин**, **RTO ≤ 1 час**.
+
+**DUR05:** Идемпотентность обработки подтверждений сделок.
+
+
+---
 
 ### Мониторинг (Monitoring)
 
-- **MON01**: Использование стандартных инструментов мониторинга организации.
+**MON01:** Мониторинг API, БД, очередей/шины событий, задержки котировок, интеграций с брокером.
+
+**MON02:** Метрики + дашборды.
+
+**MON03:** Алерты DevOps/админам при сбоях и превышении SLA.
+
+---
 
 ### Организационные и юридические вопросы (Legal, Regulatory and Compliance)
 
-- **LRC01**: Соблюдение GDPR при обработке данных европейских пользователей.
+**LRC01:** Соблюдение требований по персональным данным.
 
-### Локализация и интернационализация (I18n, L10n)
+**LRC02:** Локализация данных.
 
-- **L10N01**: Поддержка русского и английского языков.
-- **L10N02**: Требуется перевод интерфейса.
+**LRC03:** Правила хранения и предоставления логов аудита.
 
-### Целевые платформа и устройства пользователей
+---
 
-- **PLT01**: Поддержка последних версий браузеров Chrome, Firefox, Safari, Edge.
-- **PLT02**: Поддержка iOS и Android.
-- **PLT03**: Поддержка устройств производителей Apple, Samsung, Huawei.
+### Локализация (I18n, L10n)
 
-## Ограничения
+**L10N01:** Основной язык — русский.
 
-- **LIM01**: Поддержка только двух языков (Русский и Английский).
-- **LIM02**: Работа на территории СНГ.
+**L10N02:** Возможность добавления английского.
 
-## Принципы
+**L10N03:** Локализация только интерфейса, не рыночных символов/тикеров.
 
-- **PRN01**: Прозрачность данных для пользователей.
-- **PRN02**: Стремление к максимальной автоматизации процессов.
+---
 
+### Целевые платформы и устройства пользователей
+
+**PLT01:** Web: Chrome/Edge/Firefox/Safari (последние 3 версии).
+
+**PLT02:** Mobile: Android 10+, iOS 14+.
+
+**PLT03:** Адаптивный интерфейс для мобильных экранов.
+
+---
+
+### Ограничения (Constraints)
+
+**LIM01:** Предпочтение Open Source / разрешённых библиотек.
+
+**LIM02:** Ограниченный бюджет и сроки (6 месяцев).
+
+**LIM03:** Минимальный состав команды (backend/frontend/QA/PM/DevOps).
+
+**LIM04:** Ограничения на внешние интеграции.
+
+**LIM05:** Обязательное логирование и аудит ключевых операций.
+
+---
+
+### Принципы (Principles)
+
+**PRN01:** Прозрачность и трассируемость операций.
+
+**PRN02:** Безопасность и контроль доступов как приоритет.
+
+**PRN03:** Масштабируемость чтения (котировки/портфель) отдельно от записи (ордера/сделки).
+
+**PRN04:** Устойчивость к сбоям интеграций.
+
+**PRN05:** Код-ревью, автотесты на критичные сценарии (ордер/сделка/портфель).
