Доработка второй лабораторной работы Архитектурные факторы

--- a/1. Исходные сведения/Архитектурные факторы.md
+++ b/1. Исходные сведения/Архитектурные факторы.md
@@ -102,7 +102,7 @@
 
 ### Безопасность и аудит (Security)
 
-**SEC01:** Соблюдение требований по защите персональных данных.
+**SEC01:** Соблюдение требований по защите персональных данных. (РФ — 152-ФЗ)
 
 **SEC02:** Шифрование при передаче: HTTPS/TLS 1.2+.
 
