--- a/1. Исходные сведения/Введение.md
+++ b/1. Исходные сведения/Введение.md
@@ -1,51 +1,96 @@
- Раздел "Введение" играет ключевую роль в этом документе, так как он предоставляет читателю обзор содержания и цели репозитория. Ниже представлена предварительная структура раздела "Введение".
+# Введение
 
-1. **Цель документа**:
-    - Описание назначения и целей архитектурного репозитория. Например, для чего именно создан этот репозиторий и какую пользу он приносит организации.
+## 1. Цель документа
 
-2. **Область применения**:
-    - Определение границ и охвата репозитория. Какие системы или проекты он охватывает, и какие исключает.
+Цель данного архитектурного репозитория — предоставить формализованное и структурированное описание архитектуры системы «Платформа для трейдинга».  
+Документ служит единым источником знаний о функциональных и нефункциональных требованиях, архитектурных принципах, ограничениях и ключевых решениях, которые формируют основу системы.  
+Репозиторий предназначен для обеспечения прозрачности разработки, повышения качества проектирования и облегчения сопровождения системы в долгосрочной перспективе.
 
-3. **Целевая аудитория**:
-    - Описание ключевых заинтересованных лиц, которые будут использовать репозиторий. Это могут быть разработчики, архитекторы, менеджеры проектов и другие.
+## 2. Область применения
 
-4. **Основные принципы и стандарты**:
-    - Краткое изложение основных архитектурных принципов и стандартов, которые используются в репозитории. Это даст читателю представление о философии и подходах, применяемых в вашей организации.
+Архитектурный репозиторий охватывает:
 
-5. **Терминология**:
-    - Словарь или глоссарий ключевых терминов, которые будут использоваться в репозитории. Это поможет обеспечить согласованное понимание терминов среди всех участников.
+- получение и отображение рыночных данных (котировки) в реальном времени;
+- инструменты анализа рынка (графики, индикаторы);
+- создание, изменение/отмену и сопровождение торговых ордеров;
+- получение подтверждений исполнения от брокера/торговой площадки;
+- управление портфелем и ведение истории сделок;
+- автоматические торговые стратегии, триггеры и уведомления;
+- публикацию аналитических материалов и рекомендаций;
+- коммуникацию пользователей (форум/обсуждения);
+- мониторинг, аудит и административные функции;
+- формирование отчетности для брокера.
 
-6. **Структура репозитория**:
-    - Краткое описание основных разделов и их назначения. Это поможет читателям понимать, где искать нужную информацию.
+В репозиторий **не входят**:
 
-7. **Обратная связь и контакты**:
-    - Информация о том, как можно связаться с авторами или ответственными за репозиторий. Также может включать в себя информацию о том, как сообщить об ошибках, предложениях или дополнениях к репозиторию.
+- внутренняя реализация систем брокера/биржи и банковских систем;
+- юридические процессы KYC/AML и лицензирование брокерской деятельности;
+- высокочастотный трейдинг (HFT) и специализированные протоколы/колокация;
+- налоговый учет и формирование официальных налоговых деклараций;
+- финансовое консультирование как услуга (персональные инвестиционные советы).
 
+## 3. Целевая аудитория
 
-----
-Пример:
+Документ предназначен для следующих групп участников проекта:
 
-**1. Цель**
+- **Архитекторы** — анализ, проектирование и принятие архитектурных решений.
+- **Разработчики** — понимание структуры системы и следование техническим стандартам.
+- **Тестировщики** — проектирование тестов с учетом требований и ограничений.
+- **Менеджеры проектов** — планирование работ и контроль исполнения.
+- **Администраторы системы / DevOps** — развертывание, мониторинг и эксплуатация решения.
+- **Аналитики и заказчики** — согласование функционала и обоснование проектных решений.
+- **Специалисты по безопасности** — контроль выполнения требований безопасности и аудита.
 
-Целью данного репозитория является предоставление подробного описания архитектуры для системы управления кулинарными рецептами, которая будет служить базой для создания, хранения и поиска рецептов.
+## 4. Основные принципы и стандарты
 
-**2. Область применения**
+Основные принципы архитектуры:
 
-Система планируется к использованию как индивидуальными поварами и кулинарными блогерами, так и большими кулинарными порталами и мобильными приложениями с рецептами.
+- **Безопасность данных и средств пользователей** — шифрование, многоуровневая аутентификация, контроль доступа.
+- **Высокая доступность 24/7** — отказоустойчивость, плановое обслуживание, деградация при сбоях интеграций.
+- **Низкая задержка и высокая производительность** — минимизация времени реакции критичных операций (котировки/ордера).
+- **Прозрачность операций** — аудит ключевых действий (ордер, сделка, портфель, административные изменения).
+- **Модульность** — разделение системы на логические компонент.
+- **Масштабируемость** — горизонтальное масштабирование чтения/стриминга и обработки событий.
+- **Интегрируемость** — возможность подключения брокеров/банков и расширения интеграций.
+- **Надежность данных** — резервное копирование, восстановление, идемпотентность обработки внешних сообщений.
+- **Удобство интерфейса** — минимизация шагов и понятные статусы для пользователя.
 
-**3. Технический контекст**
+## 5. Терминология
 
-Система будет разработана с использованием современных технологий и инструментов, уделяя особое внимание масштабируемости, безопасности данных и удобству пользовательского интерфейса. Основная архитектура системы будет опираться на концепции микросервисов и событийно-ориентированных систем, что позволит быстро внедрять новые функции и адаптировать систему к изменяющимся требованиям.
+- **Трейдер** — пользователь, который анализирует рынок и совершает сделки.
+- **Аналитик** — пользователь, публикующий обзоры и рекомендации по рынку.
+- **Брокер** — участник, обеспечивающий исполнение ордеров и подтверждение сделок.
+- **Администратор** — пользователь, отвечающий за эксплуатацию, доступы, мониторинг и безопасность.
+- **Финансовый инструмент** — актив, доступный для наблюдения и торговли (акции, валюты).
+- **Котировка** — актуальная цена (или набор ценовых параметров) инструмента.
+- **Ордер** — поручение на покупку/продажу инструмента.
+- **Сделка** — результат исполнения ордера (полного или частичного).
+- **Портфель** — совокупность позиций и денежных средств пользователя.
+- **История сделок** — журнал операций пользователя за период.
+- **Авто-стратегия** — набор условий, по которым система может автоматически разместить ордер.
+- **Уведомление** — сообщение пользователю о важном событии (исполнение, алерт, срабатывание стратегии).
+- **Аудит** — журналирование действий и изменений для трассируемости и контроля.
 
-**4. Основные функции**
+## 6. Структура репозитория
 
-- Создание и редактирование рецептов.
-- Хранение и категоризация рецептов.
-- Поиск по рецептам с использованием различных фильтров.
-- Интеграция с социальными сетями и возможностью шаринга.
-- Рекомендации рецептов на основе предпочтений пользователя.
+Архитектурный репозиторий включает следующие разделы:
 
-**5. Проблемы и ограничения**
+- **Описание требований** — функциональные, нефункциональные, ограничения, принципы, архитектурные факторы.
+- **Архитектурное видение** — общая концепция и ключевые решения (контексты, интеграции, данные).
+- **Диаграммы архитектуры** — контекстные/компонентные/последовательностей, схемы Event Storming и др.
+- **Модель данных** — сущности, связи, ключевые таблицы/проекции, подход к хранению событий/аудита.
+- **Интеграции** — внешние системы (брокеры, фиды, банки), протоколы, точки взаимодействия.
+- **Системные сценарии** — описания ключевых пользовательских потоков (котировки, ордер, портфель и т.п.).
+- **Риски и допущения** — ограничения домена, риски безопасности/доступности/интеграций.
+- **Эксплуатация** — развертывание, обновление, мониторинг, бэкапы, восстановление.
 
-В разработке данной системы следует учитывать различные культурные и диетические особенности пользователей, а также вопросы конфиденциальности и защиты авторских прав на рецепты.
+## 7. Обратная связь и контакты
 
+Для предложений, исправления ошибок или запроса дополнительной информации можно использовать следующие каналы:
+
+- корпоративная почта;
+- система трекинга задач;
+- внутренний портал организации;
+- Git-репозиторий.
+
+Команда разработки открыта для предложений по улучшению архитектуры и расширению функциональности.
