--- a/1. Исходные сведения/Словарь.md
+++ b/1. Исходные сведения/Словарь.md
@@ -1,29 +1,44 @@
-Ключевые термины, которые полезно объяснить.
-
-----
-
-Пример:
-
-1. **Автор рецепта** — Пользователь, который создал или добавил рецепт в систему.
-2. **Блюдо** — Готовое к употреблению кулинарное изделие, приготовленное по определенному рецепту.
-3. **Время приготовления** — Продолжительность времени, необходимая для приготовления блюда с начала и до конца.
-4. **Гарнир** — Дополнительное блюдо или ингредиент, служащий дополнением к основному блюду.
-5. **Диетические ограничения** — Спецификации или ограничения в ингредиентах или методах приготовления, соответствующие определенным диетам или здоровому питанию.
-6. **Закладки** — Функция, позволяющая пользователям сохранять понравившиеся рецепты для быстрого доступа к ним в будущем.
-7. **Ингредиент** — Продукт или составляющая, необходимая для приготовления блюда.
-8. **Категория рецепта** — Классификация рецепта на основе его особенностей, например, "десерты" или "мясные блюда".
-9. **Личный профиль** — Цифровая идентификация пользователя в системе, содержащая его настройки, сохраненные рецепты и другую персональную информацию.
-10. **Метод приготовления** — Последовательность действий или техник, используемых для приготовления блюда.
-11. **Нотификации** — Сообщения или уведомления, отправляемые системой пользователю о новых рецептах, обновлениях или других событиях.
-12. **Оценка** — Числовая или звездная система, позволяющая пользователям выражать свое мнение о конкретном рецепте.
-13. **Поиск** — Инструмент для нахождения рецептов в системе на основе различных критериев или ключевых слов.
-14. **Рейтинг рецепта** — Среднее арифметическое всех оценок, данных пользователем конкретному рецепту.
-15. **Социальное шаринг** — Функциональность, позволяющая пользователям делиться рецептами через социальные сети или другие платформы.
-16. **Теги** — Ключевые слова или фразы, присвоенные рецепту для дополнительной классификации или поиска.
-17. **Уровень сложности** — Классификация рецепта на основе сложности его приготовления, например, "начинающий", "средний" или "профессионал".
-18. **Фильтр поиска** — Инструмент для сужения результатов поиска на основе определенных критериев.
-19. **Цель рецепта** — Основное предназначение или ситуация употребления блюда, например, "на каждый день", "праздничное" или "для романтического ужина".
-20. **Шаги приготовления** — Последовательные действия, описанные в рецепте, для создания конечного блюда.
-21. **Экспорт рецепта** — Возможность сохранения или отправки рецепта в различных форматах или на другие платформы.
-22. **Юзер** — Альтернативное название пользователя системы.
-23. **Язык интерфейса** — Язык, на котором предоставляется пользовательский интерфейс системы.
+| №  | Термин                                 | Определение                                                                                     |
+|----|----------------------------------------|-------------------------------------------------------------------------------------------------|
+| 1  | Трейдер                                | Пользователь, который анализирует рынок и совершает торговые операции.                          |
+| 2  | Аналитик                               | Пользователь, публикующий обзоры рынка и рекомендации для трейдеров.                            |
+| 3  | Брокер                                 | Участник, исполняющий ордера клиента и подтверждающий сделки (через внешнюю торговую систему).  |
+| 4  | Администратор системы                  | Пользователь, отвечающий за стабильность, доступы, мониторинг и безопасность платформы.         |
+| 5  | Финансовый инструмент                  | Актив, доступный для наблюдения и торговли (акции, валюты и др.).                               |
+| 6  | Тикер                                  | Короткий идентификатор финансового инструмента (например, AAPL).                                |
+| 7  | Котировка                              | Актуальная цена/ценовые параметры инструмента, получаемые из рыночного фида.                    |
+| 8  | Рыночный фид                           | Внешний источник рыночных данных, поставляющий котировки и обновления в реальном времени.       |
+| 9  | Подписка на котировки                  | Механизм получения потока обновлений по выбранным инструментам.                                 |
+| 10 | Ордер                                  | Поручение на покупку или продажу финансового инструмента.                                       |
+| 11 | Рыночный ордер                         | Ордер, исполняемый по текущей доступной рыночной цене.                                          |
+| 12 | Лимитный ордер                         | Ордер, исполняемый только по заданной цене или лучше.                                           |
+| 13 | Статус ордера                          | Состояние ордера (создан, принят, частично исполнен, исполнен, отменен, отклонен).              |
+| 14 | Исполнение ордера                      | Процесс выполнения ордера на торговой площадке/у брокера.                                       |
+| 15 | Сделка                                 | Зафиксированный факт покупки/продажи инструмента в результате исполнения ордера.                |
+| 16 | Подтверждение сделки                   | Сообщение о сделке от брокера/биржи (execution report / trade confirmation).                    |
+| 17 | Портфель                               | Совокупность позиций и денежных средств пользователя.                                           |
+| 18 | Позиция                                | Количество инструмента в портфеле с параметрами (средняя цена, текущая оценка и т.п.).          |
+| 19 | Баланс                                 | Сумма денежных средств на счете пользователя в системе.                                         |
+| 20 | Доступные средства                     | Часть баланса, доступная для новых ордеров с учетом резервов/комиссий.                          |
+| 21 | История сделок                         | Журнал сделок пользователя за период, с фильтрами и детализацией.                               |
+| 22 | PnL                                    | Прибыль/убыток по позиции или за период (Profit and Loss).                                      |
+| 23 | Комиссия                               | Затраты на совершение операций (комиссия брокера/площадки/платежей).                            |
+| 24 | Автоматическая стратегия               | Набор правил, по которым система может автоматически разместить ордер.                          |
+| 25 | Триггер стратегии                      | Условие срабатывания стратегии (например, цена достигла порога).                                |
+| 26 | Ценовой алерт                          | Уведомление о достижении инструментом заданного значения/условия.                               |
+| 27 | Уведомление                            | Сообщение пользователю о событии (исполнение, отказ, алерт, срабатывание стратегии).            |
+| 28 | Аналитический обзор                    | Публикация аналитика с оценкой рынка/инструмента.                                               |
+| 29 | Рекомендация                           | Рекомендация аналитика (Buy/Sell/Hold) по инструменту или рынку.                                |
+| 30 | Лента аналитики                        | Раздел/страница для просмотра обзоров и рекомендаций.                                           |
+| 31 | Форум                                  | Раздел платформы для общения и обмена мнениями пользователей.                                   |
+| 32 | Тема форума                            | Обсуждение, созданное пользователем в рамках форума.                                            |
+| 33 | Сообщение                              | Публикация внутри темы форума.                                                                  |
+| 34 | Роль пользователя                      | Набор прав доступа (трейдер/аналитик/брокер/админ).                                             |
+| 35 | RBAC                                   | Управление доступом на основе ролей (Role-Based Access Control).                                |
+| 36 | Аутентификация                         | Процесс подтверждения личности пользователя (логин/пароль, токены и т.п.).                      |
+| 37 | MFA / 2FA                              | Многофакторная аутентификация (дополнительный фактор помимо пароля).                            |
+| 38 | Шифрование данных                      | Защита данных при передаче и/или хранении с использованием криптографических методов.           |
+| 39 | DDoS-защита                            | Механизмы защиты от распределенных атак отказа в обслуживании.                                  |
+| 40 | Аудит / Журнал действий                | Логирование ключевых действий пользователей и системы для расследований и контроля.             |
+| 41 | Интеграция с брокером                  | Взаимодействие платформы с брокерской/биржевой API для исполнения ордеров и получения статусов. |
+| 42 | Интеграция с банком/платежным шлюзом   | Взаимодействие для пополнения/вывода средств (если предусмотрено сценарием).                    |
